tests/gen-derivation/derivation/norec w_ext w_dep_cons_param 004-neg/expected
Error: While processing right hand side of checkedGen. Error during reflection: Target type's argument must be a variable name

DerivedGen:12:57--12:63
 08 | 
 09 | %language ElabReflection
 10 | 
 11 | export
 12 | checkedGen : Fuel -> (Fuel -> Gen String) => Gen (Maybe String)
                                                              ^^^^^^

Error: Undefined name main. 
Did you mean: min?
